[package]
name = "advent2022"
version = "0.1.0"
authors = ["Heath Kehoe <yaheath@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "*"
lazy_static = "*"
itertools = "*"
derivative = "*"
json = "*"
ya_advent_lib = { version = "1.2.1", path = "../advent_lib" }
#linked-list = "0"
